# r3_core

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs  post_processing.wgsl
src/: bind.rs  buffer_bind_group.rs  core.rs  ecs.rs  handler.rs  layout.rs  layouts.rs  lib.rs  main.rs  post_processing.wgsl  prelude.rs  render_context.rs  shader.wgsl  surface.rs  texture.rs
src/bind/: buffer.rs  dynamic_buffer.rs  storage_buffer.rs  uniform_buffer.rs
src/core/: camera.rs  camera_2d.rs  grounded_camera.rs  hdr.rs  mesh.rs  post_processing.rs  surface.rs  tileset.rs  transform.rs  vertex.rs
src/handler/: app.rs  layout.rs  raw_mesh.rs  render_context.rs  renderer.rs  surface.rs  window.rs
src/handler/layout/: shader.rs
src/layout/: compute_shader.rs  instances.rs  shader.rs  vertex.rs
src/layouts/: compute_layout.rs  instanced_layout.rs  layout.rs  shaders.rs  vertex.rs
src/layouts/shaders/: compute_shader.rs  shader.rs
src/render_context/: command_encoder.rs  compute_pass.rs  render_pass.rs
src/render_context/render_pass/: render_pass_mut.rs
src/surface/: mesh.rs  raw_mesh.rs
